syntax = "proto3";

package socnet;

option go_package = "./socnet/api";

import "google/api/annotations.proto";

service SocNet {
  rpc UserRegister (UserRegisterRequest) returns (UserRegisterResponse) {
    option (google.api.http) = {
      post: "/user/register"
      body: "*"
    };
  }
  rpc GetUser (GetUserRequest) returns (GetUserResponse) {
    option (google.api.http) = {
      get: "/user/get/{userID}"
    };
  }
  rpc Login (LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/login"
      body: "*"
    };
  }
  rpc UserSearch (UserSearchRequest) returns (UserSearchResponse) {
    option (google.api.http) = {
      get: "/user/search"
    };
  }
}

message UserRegisterRequest {
  string firstName = 1;
  string secondName = 2;
  int64 dateBirth = 3;
  string biography = 4;
  string city = 5;
  string password = 6;

}

message UserRegisterResponse {
  string userID = 1;
}

message GetUserRequest {
  string userID = 1;
}

message GetUserResponse {
  string status = 1;
}

message LoginRequest {
  string userID = 1;
  string password = 2;

}

message LoginResponse {
  string status = 1;
}

message UserSearchRequest {
  string firstName = 1;
  string secondName = 2;
}

message UserSearchResponse {
  repeated UserInfo userInfo = 1;
}

message UserInfo {
  string firstName = 1;
  string secondName = 2;
  string dateBirth = 3;
}